projects/cms/timesheet-service/k8s-config/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: timesheet
  name: timesheet
  namespace: cms-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: timesheet
  template:
    metadata:
      labels:
        app: timesheet
    spec:
      containers:
        - image: registry.coherent.in/cms-timesheet-service:3
          resources:
            requests:
              cpu: "100m"
              memory: "1500Mi"
            limits:
              cpu: "2000m"
              memory: "4096Mi"
          imagePullPolicy: Always
          name: timesheet
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 8015
            failureThreshold: 30
            periodSeconds: 10
      imagePullSecrets:
      - name: registry-regcred
