projects/cms/timesheet-service/k8s-config/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: timesheet
  name: timesheet-svc
  namespace: cms-prod
spec:
  ports:
    - port: 8015
      protocol: TCP
      targetPort: 8015
  selector:
    app: timesheet
